syntax = "proto3";

package api;

option go_package = "github.com/NikiTesla/link_shortener";
import "api/annotations.proto";

service Shortener {
    rpc SaveOriginal(SaveOriginalRequest) returns (SaveOriginalResponse) {
        option (api.http) = {
            post: "/save"
            body: "*"
        };
    }
    rpc GetOriginal(GetOriginalRequest) returns (GetOriginalResponse) {
        option (api.http) = {
            get: "/get/{shorted_link}"
        };
    }
}

message SaveOriginalRequest {
    string original_link = 1;
}

message SaveOriginalResponse {
    string shorted_link = 1;
}

message GetOriginalRequest {
    string shorted_link = 1;
}

message GetOriginalResponse {
    string original_link = 1;
}